updated storage, processing and storage open api
