# Storage/openapi.yml
@@ -1,5 +1,5 @@
 ---
-openapi: 3.0.0
+openapi: 3.1.0
 info:
   title: Employee management RESTful API
   description: "Employee management system that tracks employees within a company. They will be able to add, delete, and modify employees. They will also be able to use thie API to request and submit leave for their employees."
@@ -30,7 +30,15 @@ paths:
       operationId: app.get_employees
       description: Gets employees after timestamp reading
       parameters:
-        - name: timestamp
+        - name: start_timestamp
+          in: query
+          description: Limits the number of items on a page
+          schema:
+            type: string
+            format: date-time
+            example: 2016-08-29T09:12:33Z
+
+        - name: end_timestamp
           in: query
           description: Limits the number of items on a page
           schema:
@@ -68,7 +76,15 @@ paths:
       operationId: app.get_requests
       description: Gets time requests after a specific timestamp
       parameters:
-        - name: timestamp
+        - name: start_timestamp
+          in: query
+          description: Limits the number of items on a page
+          schema:
+            type: string
+            format: date-time
+            example: 2016-08-29T09:12:30Z
+
+        - name: end_timestamp
           in: query
           description: Limits the number of items on a page
           schema:
